# tpx3_toolkit

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rust_test.py  setup.py
benchmarks/rust/: test_rust.perf
python/tpx3_toolkit/: __init__.py  core.py  filter.py  simulate.py  viewer.py
python/tpx3_toolkit/examples/: TOT correction curve new firmware GST.txt
src/: backend.rs  chop.rs  lib.rs  main.rs  parse.rs
tpx3_toolkit/: core.py  viewer.py
tpx3_toolkit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
